--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -6,4 +6,6 @@
 </head>
 <body>
 	<h1>{{pageTitle}}</h1>
-	
+	<p><a href="/">Home</a></p>
+	<p><a href="/About">About</a></p>
+	<p><a href="/Projects">Projects</a></p>
